[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemy/Wizard.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemy/wizard.png" type="Texture" id=2]

[sub_resource type="Animation" id=3]
resource_name = "cast"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 6, 14 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 5 ]
}

[sub_resource type="RectangleShape2D" id=5]
resource_local_to_scene = true
extents = Vector2( 10, 19.1452 )

[sub_resource type="CircleShape2D" id=4]
resource_local_to_scene = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.368627, 0.933333, 0.176471, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.980392, 0.0823529, 0.0823529, 1 )

[node name="Wizard" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -4.0431, -13.7941 )
texture = ExtResource( 2 )
hframes = 15
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cast = SubResource( 3 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="detector" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource( 4 )

[node name="hp_bar" type="ProgressBar" parent="."]
margin_left = -20.0
margin_top = -35.0
margin_right = 20.0
margin_bottom = -29.0
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
value = 50.0
percent_visible = false

[node name="Tween" type="Tween" parent="hp_bar"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
